# pyrite64

./: CMakeLists.txt  CMakePresets.json
data/scripts/: defaultObject.cpp
docs/: conf.py
docs/docs/: faq.md
docs/docs/manual/script/: objScript.md
n64/engine/include/scene/: object.h  objectFlags.h
n64/engine/src/scene/: object.cpp  scene.cpp
n64/examples/baked_light/data/scenes/2/: scene.json
n64/examples/jam25/: project.p64proj
n64/examples/jam25/assets/: bot.glb.conf
n64/examples/jam25/assets/mapEnd/: stoneBci.glb.conf
src/: context.h  main.cpp
src/editor/: globalActions.cpp  thumbnailCache.cpp  thumbnailCache.h
src/editor/imgui/: helper.cpp  helper.h
src/editor/pages/parts/: assetInspector.cpp  assetsBrowser.cpp
src/project/: assetManager.cpp  project.cpp  project.h
src/project/component/types/: compCode.cpp  compRigidBody.cpp
src/renderer/: framebuffer.cpp  framebuffer.h
src/utils/: aabb.h  codeParser.cpp  codeParser.h  hash.cpp  json.h  prop.h
